@startuml
'https://plantuml.com/class-diagram

package components {
    class ArmeComponent {

        - type : String

    }
    class PhysicsComponent {

    }
        class AttackComponent {

        }
}


package systems {

    class PhysicsSystem{
        # process (Entity e)
    }


}

package com.artemis {
    class EntityProcessingSystem
}

PhysicsSystem --> ArmeComponent : "uses >"
PhysicsSystem --> AttackComponent : "uses >"
PhysicsSystem --> PhysicsComponent : "uses >"
PhysicsSystem -up-|> EntityProcessingSystem

@enduml